# raster-calc

./: .gitignore  Cargo.toml  README.md
.github/workflows/: build_windows.yml  release.yml
benches/: benchmark.rs
src/: batch.rs  cli.rs  lib.rs  main.rs
src/indices/: mod.rs  ndi.rs  savi.rs
src/io/: mod.rs  reader.rs  writer.rs
src/processing/: mod.rs  parallel.rs
src/processing/indices/: bsi.rs  evi.rs  mod.rs  msavi2.rs  ndi.rs  ndsi.rs  ndwi.rs  osavi.rs  savi.rs
src/utils/: cache.rs  fixed_point.rs  gdal_ext.rs  mod.rs
tests/: generate_test_data.sh  run_batch_benchmark.sh  run_integration_tests.sh  sentinel_batch_config.json  test_sentinel_granule.sh  test_sentinel_granute.sh  unit_tests.rs
