[package]
name = "raster-calc"
version = "0.1.0"
edition = "2021"
authors = ["ominiverdi"]
description = "High-performance raster calculator for spectral indices"
license = "MIT"

[dependencies]
gdal = { version = "0.17", features = ["bindgen"] }
gdal-sys = "0.10"
rayon = "1.10.0"
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"