[package]
name = "raster-calc"
version = "0.1.0"
edition = "2021"
authors = ["Lorenzo Becchi"]
description = "High-performance raster calculator for spectral indices"
license = "MIT"

[dependencies]
gdal = { version = "0.17", features = ["bindgen"] }
gdal-sys = "0.10"
rayon = "1.10.0"
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
flume = "0.11"
parking_lot = "0.12"
itertools = "0.14"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
num_cpus = "1.15.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"


[lib]
path = "src/lib.rs"

[[bin]]
name = "raster-calc"
path = "src/main.rs"


[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "benchmark"
harness = false